feat: 잡알리오 채용정보 연동 + 어드민 대시보드 프리뷰 + 모바일 홈 개선
- 서버: JobAlioFetcher 추가로 공공기관 채용정보(잡알리오 OpenAPI) 수집 파이프라인 연동, Scholarship 엔티티/DTO/스키마에 채용 필드 확장
- 인하공전 크롤러(InhatcCrawler) 및 CrawlService/CrawlPipeline 보강
- 어드민: BottomNav/Chip/ScholarshipCard/SectionHeader 등 inha-catch UI 컴포넌트 추가, /preview 대시보드(KPI/Donut/Line/Sidebar) 시안 추가
- 모바일: 홈(index) 개선 및 ScholarshipCard·SectionHeader 정리
- 설정: application.properties 시크릿 기본값 제거(노출 방지), JOBALIO 키를 환경변수/로컬 파일로 주입

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>